fixed gradient bg for dark mode

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,10 +5,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Oswald&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-html 
-{
+html {
     scroll-behavior: smooth;
 }
+
 /*
     my Fonts
 */
@@ -122,14 +122,15 @@ body.light-mode {
         color: #2d3436;
         font-weight: 700;
     }
-    label
-    {
+
+    label {
         @apply text-blue-500;
     }
-    input 
-    {
+
+    input {
         @apply text-left text-blue-600 font-bold;
     }
+
     input[name="company-name"] {
         // border: 2px solid red !important;
         background: linear-gradient(#dfe6e9, #dfe6e9) padding-box,
@@ -137,6 +138,7 @@ body.light-mode {
         filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#d24074", endColorstr="#6518b4", GradientType=1);
         border: 2px solid transparent;
     }
+
     input[name="phone-number"] {
         // border: 2px solid red !important;
         background: linear-gradient(#dfe6e9, #dfe6e9) padding-box,
@@ -144,6 +146,7 @@ body.light-mode {
         filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#d24074", endColorstr="#6518b4", GradientType=1);
         border: 2px solid transparent;
     }
+
     textarea {
         background: linear-gradient(#dfe6e9, #dfe6e9) padding-box,
             linear-gradient(90deg, rgba(210, 64, 116, 1) 0%, rgba(101, 24, 180, 1) 100%);
@@ -154,8 +157,11 @@ body.light-mode {
 }
 
 body.dark-mode {
-    background-color: #111;
+    // background-color: #111;
     color: #dfe6e9;
+    background: linear-gradient(200deg, #001822, #0c1422, #14111e, #190d19, #1a0b12, #190a0a, #150a04, #100a01);
+    background-attachment: fixed; 
+    will-change: background;
 }
 
 .heading-intro {
